Renamed 'index' to 'team'

--- a/src/app/alliance/alliance.component.html
+++ b/src/app/alliance/alliance.component.html
@@ -177,7 +177,6 @@
 				          <p>Due to privacy concerns, the activity heatmap feature has been removed from GrepoData entirely.<br/>
 					          <br/>
 					          <br/>
-					          Read more about this update in our <a routerLink="/blog/heatmap-and-indexer-changes-2020" style="text-decoration: underline;">blog post</a>.
 				          </p>
 			          </div>
 			          <!---->
@@ -330,11 +329,10 @@
 			            <div class="row">
 				            <div class="col-xs-12 col-sm-8">
 					            <div class="alert alert-gd-1 text-center">
-						            <p>When you link an <span class="gd-primary">enemy city index</span>, we will be able to show collected intelligence about this alliance here.</p>
-						            <p>You can create a new index or load an existing index shared by your alliance.</p>
+						            <p>When you sign in with a GrepoData city indexer account, we will be able to show collected intelligence about this alliance here.</p>
 						            <h3>
-							            <a class="a-link-dialog" style="color: #334254 !important;" routerLink="/indexer/0">
-								            Create or load an index <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon>
+							            <a class="gd-primary a-link-dialog" routerLink="/indexer">
+                            Sign in to your GrepoData account <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon>
 							            </a>
 						            </h3>
 					            </div>
