--- a/src/app/auth/profile/components/delete-account/delete-account.component.html
+++ b/src/app/auth/profile/components/delete-account/delete-account.component.html
@@ -8,7 +8,7 @@
 			<h3>WARNING:</h3>
 			<p><strong>This will permanently remove your account on grepodata.com. All your personal information will be removed.</strong></p>
 			<ul>
-				<li>Any index created by you will still remain active, but you will no longer be the administrator of that index. We advise you to transfer index ownership to someone else before removing your account.</li>
+				<li>Any team created by you will still remain active, but you will no longer be the administrator of that team. We advise you to transfer team ownership to someone else before removing your account.</li>
 				<li>Any intel that you shared with others will still be visible to them, but it will be anonymized and any link to you will be removed</li>
 				<!--<li>All linked Grepolis accounts will be unlinked from your GrepoData account.</li>-->
 				<li>If you want to use our services again sometime, you will have to create a new account.</li>
