--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -30,7 +30,7 @@
     <div *ngIf="active_tab === 'bug'">
       <app-bug-report></app-bug-report>
     </div>
-    <div *ngIf="active_tab === 'overview'">
+    <div *ngIf="active_tab === 'team'">
       <app-overview></app-overview>
     </div>
     <div *ngIf="active_tab === 'player'">
@@ -44,7 +44,7 @@
     </div>
     <span *ngIf="active_tab === 'intel'"><app-intel></app-intel></span>
     <span *ngIf="active_tab === 'linked'"><app-linked-accounts></app-linked-accounts></span>
-    <span *ngIf="active_tab === 'indexes'"><app-indexes></app-indexes></span>
+    <span *ngIf="active_tab === 'teams'"><app-indexes></app-indexes></span>
     <span *ngIf="active_tab === 'script'"><app-userscript></app-userscript></span>
     <span *ngIf="active_tab === 'settings'"><app-settings></app-settings></span>
     <span *ngIf="active_tab === 'password'"><app-change-password></app-change-password></span>
