--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -182,13 +182,13 @@
                   <div class="lib-header-seperator"></div>
                 </div>
                 <div class="lib-row lib-desc">
-                  Collect all enemy troop intelligence that is posted on your alliance forum:
+                  Collect all enemy city intelligence from your inbos or alliance forum:
                   <br/>
                   <br/>
                   <ul>
-                    <li>Create your own <strong>private</strong> index to browse the collected intel.</li>
+                    <li>Create your a private <strong>team</strong> to share the collected intel.</li>
                     <li>Use our <strong>userscript</strong> while browsing your in-game alliance forum to collect new intel.</li>
-                    <li>Share the index with your allies and know when and where to strike next!</li>
+                    <li>Invite your allies to join your team to work together!</li>
                   </ul>
                 </div>
                 <div class="lib-row lib-footer">
@@ -221,8 +221,10 @@
                                 <br/>
                                 <br/>
                                 <ul>
-                                    <li>Shows daily scoreboards.</li>
-                                    <li>Integrated with your city index: get town intelligence.</li>
+                                    <li>Show daily player and alliance scoreboards.</li>
+                                    <li>Search for players by name.</li>
+                                    <li>Calculate unit stats and resource costs.</li>
+                                    <li>Integrate with our city indexer tool.</li>
                                 </ul>
                             </div>
                             <div class="lib-row lib-footer">
