--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -26,7 +26,7 @@
           This allows you to browse the collected intel using the in-game town intel view or by logging in here.
           <br/>
           <br/>
-          3. <strong>Sharing:</strong> If you are a member of an index and if you enable contributions to that index, the report you just indexed will also be shared with your allies as long as they also have access to that index.
+          3. <strong>Sharing:</strong> If you are a member of a GrepoData team and if you enable contributions to that team, the report you just indexed will also be shared with your allies as long as they also have access to that team.
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
           <img class="lib-img" style="max-width: 100%; display: block;" src="../../assets/images/indexer_town.png" alt="Grepolis town intel">
@@ -39,8 +39,8 @@
     <h2 class="gd-primary">Why do I need a GrepoData account?</h2>
     <div class="faq-content">
       A GrepoData account is required to guarantee the security of the intel you collect and the people you share it with.
-      This way, the admin of an index can manage exactly who has access to the intel and can revoke their access whenever needed.
-      Simply having a URL to the index will no longer grant you access to the intel in that index.
+      This way, the admin of a team (formerly known as 'index') can manage exactly who has access to the intel and can revoke their access whenever needed.
+      Simply having a URL to an index will no longer grant you access to the intel in that index.
       <br/>
       This is also one of the measures we had to take to pursue official approval of our userscript.
       <br/>
@@ -57,12 +57,15 @@
     </div>
   </div>
   <div class="alert alert-gd-1">
-    <h2 class="gd-primary">What is an index?</h2>
+    <h2 class="gd-primary">What is a team?</h2>
     <div class="faq-content">
-      An <strong>index</strong> is a collection of enemy intelligence. Anyone can create a new index and invite others to join their index.
-      The members of an index can then choose to contribute the reports they collect to the index. All members of the index will also be able to browse this intel.
+      An <strong>team</strong> is a collection of enemy intelligence. Anyone can create a new team and invite others to join their team.
+      The members of a team can then choose to contribute the reports they collect to the team. All members of the team will also be able to browse this intel.
       <br/>
-      Our recommendation is that you create an index together with your alliance. This way, you can work together to gather enemy intelligence.
+      Our recommendation is that you create a team together with your alliance. This way, you can work together to gather enemy intelligence.
+      <br/>
+      <br/>
+      <strong>Before April 2021, a team used to be known as an 'index'.</strong> Teams are the replacement of the old index system, but their functionality is still very similar.
     </div>
   </div>
   <div class="alert alert-gd-1">
@@ -88,15 +91,15 @@
     </div>
   </div>
   <div class="alert alert-gd-1">
-    <h2 class="gd-primary">Is my index secure?</h2>
+    <h2 class="gd-primary">Is my team secure?</h2>
     <div class="faq-content">
-      As an admin or owner of an index, you can add or remove users from the index at any time. Only active members of the index will have access to the information in the index. Once you remove a user, they will nog longer be able to access the collected intel from your index.
+      As an admin or owner of a team, you can add or remove users from the team at any time. Only active members of the team will have access to the information in the team. Once you remove a user, they will nog longer be able to access the collected intel from your team.
     </div>
   </div>
   <div class="alert alert-gd-1">
     <h2 class="gd-primary">Who should install the userscript?</h2>
     <div class="faq-content">
-      The userscript is the only way to contribute new intel to an index. You should encourage your index members to also use the script in order to maximize the collected intel.
+      The userscript is the only way to contribute new intel to a team collection. You should encourage your team members to also use the script in order to maximize the collected intel.
     </div>
   </div>
   <div class="alert alert-gd-1">
@@ -107,15 +110,15 @@
     </div>
   </div>
   <div class="alert alert-gd-1">
-    <h2 class="gd-primary">Can I create multiple indexes?</h2>
+    <h2 class="gd-primary">Can I create multiple teams?</h2>
     <div class="faq-content">
-      You can create as many indexes as you wish. Please note that you should make a new index for each world you wish to play in.
+      You can create as many teams as you wish. Please note that you should make a new team for each world you wish to play in.
     </div>
   </div>
   <div class="alert alert-gd-1">
-    <h2 class="gd-primary">Can I merge my index with a friendly alliance?</h2>
+    <h2 class="gd-primary">Can I merge my team with another team from a friendly alliance?</h2>
     <div class="faq-content">
-      Merging and forking of indexes will be part of a future release.
+      Merging and forking of teams will be part of a future release.
     </div>
   </div>
   <div class="alert alert-gd-1">
