--- a/src/app/indexer/landing-page/landing-page.component.html
+++ b/src/app/indexer/landing-page/landing-page.component.html
@@ -6,7 +6,7 @@
 				<h1>
 					<i class="fa fa-university gd-secondary" aria-hidden="true"></i>&nbsp;<span><strong class="gd-secondary">Userscript:</strong> Enemy City Indexer</span>
 				</h1>
-				<h4 class="gd-tertiary hidden-xs">Easily collect and share intelligence about enemy cities with your own private index</h4>
+				<h4 class="gd-tertiary hidden-xs">Easily collect and share intelligence about enemy cities with your own private team</h4>
 			</mat-card-title>
 			<mat-card-content>
 
@@ -38,11 +38,11 @@
               <div class="bs-wizard-info text-center"><strong>Upload</strong> new reports</div>
             </div>
 
-            <div class="col-xs-3 bs-wizard-step" matTooltip="Create and share an index with your allies to share the collected intel"><!-- complete -->
+            <div class="col-xs-3 bs-wizard-step" matTooltip="Create a team and invite your allies to share the collected intel"><!-- complete -->
               <div class="text-center bs-wizard-stepnum">Step 4</div>
               <div class="progress"><div class="progress-bar"></div></div>
               <a class="bs-wizard-dot inactive"></a>
-              <div class="bs-wizard-info text-center"><strong>Share</strong> via an <strong>index</strong></div>
+              <div class="bs-wizard-info text-center"><strong>Share</strong> with a <span class="hidden-xs hidden-sm hidden-md">GrepoData </span><strong>team</strong></div>
             </div>
 
           </div>
@@ -100,7 +100,7 @@
                   <div class="circle-tile ">
                     <div class="circle-tile-heading dark-blue"><i class="fa fa-list fa-fw fa-2x"></i></div>
                     <div class="circle-tile-content dark-blue">
-                      <div class="circle-tile-description text-faded"> Indexes created</div>
+                      <div class="circle-tile-description text-faded"> Teams created</div>
                       <div class="circle-tile-number text-faded ">{{stats.index_count}}</div>
                       <!--<a class="circle-tile-footer" href="#">More Info <i class="fa fa-chevron-circle-right"></i></a>-->
                     </div>
