--- a/src/app/indexer/player/player.component.html
+++ b/src/app/indexer/player/player.component.html
@@ -50,7 +50,7 @@
 			          <div class="alert alert-gd-1 text-center">
 				          <h2 class="gd-primary"><strong>No player intel available.</strong> Index more reports about this player.</h2>
 				          <h4>
-					          Note: Intel about your allies (index owners) is unavailable.
+					          Note: Intel about your allies (team owners) is unavailable.
 				          </h4>
 			          </div>
 		          </div>
