--- a/src/app/indexer/siege/siege-list-dialog.html
+++ b/src/app/indexer/siege/siege-list-dialog.html
@@ -12,7 +12,7 @@
 			</div>
 
 			<div class="col-xs-12" *ngIf="!loading && error">
-				<h2>Sorry, we can not load the siege list for this index at the moment. try again later.</h2>
+				<h2>Sorry, we can not load the siege list for this team at the moment. try again later.</h2>
 			</div>
 
 			<div class="col-xs-12" style="padding: 0 !important;" *ngIf="!loading && !error">
