--- a/src/app/indexer/town/town.component.html
+++ b/src/app/indexer/town/town.component.html
@@ -65,7 +65,7 @@
 						              <br/>
 						              <div class="alert alert-warning text-center alert-gd-1">
 							              <h2><strong>No intel available.</strong> Index more reports about this town.</h2>
-							              <p>Note: intel about allies (index contributors) is hidden by default.</p>
+							              <p>Note: intel about allies (team owners) is hidden by default.</p>
 						              </div>
 					              </div>
 					              <div *ngIf="allCities.length > 0">
