--- a/src/app/auth/profile/components/indexes/indexes.component.html
+++ b/src/app/auth/profile/components/indexes/indexes.component.html
@@ -2,7 +2,7 @@
 	<div class="container-fluid">
 			<div class="row">
 				<div class="col-xs-12">
-					<h2>My indexes</h2>
+					<h2>My teams</h2>
 
 					<div *ngIf="!confirmed">
             <h4 class="gd-error">Please confirm your email address to start sharing intel</h4>
@@ -13,32 +13,32 @@
 						<h5>{{error}}</h5>
 					</app-alert>
 
-					<app-alert type="error" title="Unable to leave index" *ngIf="leave_error">
+					<app-alert type="error" title="Unable to leave team" *ngIf="leave_error">
             <span [outerHTML]="leave_error"></span>
 					</app-alert>
 
-					<app-alert type="success" title="Index contribution settings updated" *ngIf="contribute_success">
+					<app-alert type="success" title="Team contribution settings updated" *ngIf="contribute_success">
 						<div [outerHTML]="contribute_success"></div>
 					</app-alert>
 
-					<app-alert type="success" title="Index left successfully" *ngIf="leave_success">
+					<app-alert type="success" title="Team left successfully" *ngIf="leave_success">
 						<div [outerHTML]="leave_success"></div>
 					</app-alert>
 
-					<app-alert type="success" title="New index created successfully!" *ngIf="created_index">
+					<app-alert type="success" title="New team created successfully!" *ngIf="created_index">
 						<h5>
-							<span *ngIf="created_index.name"><strong>Index name: </strong>{{created_index.name}}<br/></span>
+							<span *ngIf="created_index.name"><strong>Team name: </strong>{{created_index.name}}<br/></span>
 							<span *ngIf="created_index.world"><strong>World: </strong><span [outerHTML]="created_index.world | WorldNamePipe"></span><br/></span>
 						</h5>
 
-						<button *ngIf="created_index.key" class="btn btn-secondary mr-1" routerLink="/profile/overview/{{created_index.key}}">Go to index overview <mat-icon>launch</mat-icon></button>
+						<button *ngIf="created_index.key" class="btn btn-secondary mr-1" routerLink="/profile/team/{{created_index.key}}">Go to team overview <mat-icon>launch</mat-icon></button>
 					</app-alert>
 
-					<app-alert type="info" title="What is an index?" *ngIf="confirmed && !error && !leave_error && !created_index && !contribute_success && indexes.length <= 10" [dismissible]="false">
+					<app-alert type="info" title="What is a team?" *ngIf="confirmed && !error && !leave_error && !created_index && !contribute_success && indexes.length <= 10" [dismissible]="false">
 						<p>
-							An index is a collection of enemy intelligence that can be shared with other users.
-							You can create and share your own index, or you can contribute to an existing index.
-							<br/>For example, you can share an index with your alliance members and work together to collect enemy intel.
+							A team allows you to share a collection of enemy intelligence with other users.
+							You can create and share your own team, or you can contribute to an existing team.
+							<br/>For example, you and your alliance members can create a team and work together to collect enemy intel.
 						</p>
 					</app-alert>
 
@@ -47,8 +47,8 @@
 					<div *ngIf="confirmed && !loading && indexes.length <= 0">
 						<app-alert type="warning" title="You have not yet created or joined any indexes" [dismissible]="false">
 							<div style="min-height: 73px !important;">
-								<h4>You can create your own index and share it with your allies or you can join an existing index by asking your allies to invite you.</h4>
-								<p>You can still collect intelligence if you are not part of an index, but you will only be able to share this intel by adding it to an index.</p>
+								<h4>You can create your own team and share it with your allies or you can join an existing team by asking your allies to invite you.</h4>
+								<p>You can still collect intelligence if you are not part of a team, but you will only be able to share this intel by joining a team.</p>
 							</div>
 						</app-alert>
 					</div>
@@ -56,7 +56,7 @@
           <div class="index-new" *ngIf="confirmed && !loading && indexes.length > 10">
 
             <button (click)="newIndex()" class="btn btn-success mr-1" style="margin-right: 10px;">
-              Create a new index <mat-icon>library_add</mat-icon>
+              Create a new team <mat-icon>library_add</mat-icon>
             </button>
 
           </div>
@@ -67,22 +67,22 @@
 							<table matSort (matSortChange)="sortData($event)" class="table">
 								<thead>
 								<tr>
-									<th mat-sort-header="name" scope="col">Index name</th>
+									<th mat-sort-header="name" scope="col">Team name</th>
 									<!--<th scope="col">Key (old)</th>-->
 									<th mat-sort-header="world" scope="col" class="hidden-xs hidden-sm hidden-md">World</th>
 									<th mat-sort-header="reports" scope="col" class="hidden-xs hidden-sm hidden-md">Total reports</th>
-									<th scope="col" class="hidden-xs hidden-sm">Index Owners</th>
+									<th scope="col" class="hidden-xs hidden-sm">Team Owners</th>
 									<th style="text-align: center !important;" scope="col" class="hidden-xs hidden-sm">
-										Contribute <mat-icon class="mat-icon-title-inline a-link" matTooltip="If you enable this toggle, your collected intell will be shared with this index. If you disable this option, you can still read the index but your collected intel will not be shared with the other players in this index.">help_outline</mat-icon>
+										Contribute <mat-icon class="mat-icon-title-inline a-link" matTooltip="If you enable this toggle, your collected intell will be shared with this team. If you disable this option, you can still read the intel collected by the other team members but your own collected intel will not be shared with the other players in this team.">help_outline</mat-icon>
 									</th>
 									<th scope="col" class="hidden-xs hidden-sm hidden-md">
-										Your role <mat-icon class="mat-icon-title-inline a-link" matTooltip="Only the owners or admins of an index can change the index settings. Members can add new intel. And read only access means you can not add new intel but you can still browse the intel in this index.">help_outline</mat-icon>
+										Your role <mat-icon class="mat-icon-title-inline a-link" matTooltip="Only the owners or admins of an team can change the team settings. Members can add new intel. And read only access means you can not add new intel but you can still browse the intel in this team.">help_outline</mat-icon>
 									</th>
 									<th scope="col" class="text-right btn-column-th settings">Settings</th>
 									<th scope="col" class="text-right btn-column-th actions hidden-xs">Actions</th>
 								</tr>
 								<tr class="filter-row index-filters" *ngIf="indexes.length > 10">
-									<td scope="col"><input type="text" placeholder="Filter index name" [(ngModel)]="filter_index_name"></td>
+									<td scope="col"><input type="text" placeholder="Filter team name" [(ngModel)]="filter_index_name"></td>
 									<td scope="col" class="hidden-xs hidden-sm hidden-md">
                     <select [(ngModel)]="filter_world">
                       <option value selected>All worlds</option>
@@ -90,7 +90,7 @@
                     </select>
                   </td>
 									<td scope="col" class="hidden-xs hidden-sm hidden-md"></td>
-									<td scope="col" class="hidden-xs hidden-sm"><input class="hidden-md" type="text" placeholder="Filter index owners" [(ngModel)]="filter_index_owners"></td>
+									<td scope="col" class="hidden-xs hidden-sm"><input class="hidden-md" type="text" placeholder="Filter team owners" [(ngModel)]="filter_index_owners"></td>
 									<td scope="col" class="hidden-xs hidden-sm"></td>
 									<td scope="col" class="hidden-xs hidden-sm hidden-md">
                     <select [(ngModel)]="filter_role">
@@ -115,7 +115,7 @@
                     (!filter_world || index.world == filter_world) &&
                     (!filter_role || index.role == filter_role)
                   ">
-									<td style="text-align: left !important;" (click)="routing('/profile/overview/' + index.key)">
+									<td style="text-align: left !important;" (click)="routing('/profile/team/' + index.key)">
 										<a><mat-icon style="opacity: 1; vertical-align: sub;">account_balance</mat-icon> {{index.name || index.key}}</a>
                     <div class="hidden-lg">
                       <div [outerHTML]="index.world | WorldNamePipe"></div>
@@ -126,14 +126,14 @@
                       </div>
                     </div>
 									</td>
-									<td (click)="routing('/profile/overview/' + index.key)" class="hidden-xs hidden-sm hidden-md">
+									<td (click)="routing('/profile/team/' + index.key)" class="hidden-xs hidden-sm hidden-md">
 										<div *ngIf="!index.world_stopped" [outerHTML]="index.world | WorldNamePipe"></div>
                     <span *ngIf="index.world_stopped">{{index.world}}&nbsp;<strong>(FINISHED)</strong></span>
                   </td>
-									<td (click)="routing('/profile/overview/' + index.key)" class="hidden-xs hidden-sm hidden-md">
+									<td (click)="routing('/profile/team/' + index.key)" class="hidden-xs hidden-sm hidden-md">
                     <div *ngIf="index.stats && index.stats.total_reports>=0">{{index.stats.total_reports}}</div>
 									</td>
-									<td style="padding: 0 !important; font-size: 14px; vertical-align: middle;" (click)="routing('/profile/overview/' + index.key)" class="hidden-xs hidden-sm">
+									<td style="padding: 0 !important; font-size: 14px; vertical-align: middle;" (click)="routing('/profile/team/' + index.key)" class="hidden-xs hidden-sm">
 										<div *ngFor="let owner of index.stats.owners; let i = index;">
 											<img src="../../assets/images/ally_ico.png"/> {{owner.alliance_name}}
 										</div>
@@ -143,7 +143,7 @@
 										<mat-checkbox *ngIf="index.role!='read' && !index.world_stopped" [checked]="index.contribute" (click)="enableContributions(index)"></mat-checkbox>
                     <span *ngIf="index.role=='read' && !index.world_stopped"><mat-checkbox [checked]="false" disabled="true"></mat-checkbox></span>
 									</td>
-									<td (click)="routing('/profile/overview/' + index.key)" class="hidden-xs hidden-sm hidden-md">
+									<td (click)="routing('/profile/team/' + index.key)" class="hidden-xs hidden-sm hidden-md">
 										{{index.role
 										.replace('read', 'Read only')
 										.replace('write', 'Member')
@@ -153,7 +153,7 @@
 									</td>
 									<td style="text-align: right !important;">
                     <div class="index-actions hidden-sm hidden-md hidden-lg">
-                      <button routerLink="/profile/overview/{{index.key}}" class="btn btn-success mr-1 index-btn-browse">Browse <mat-icon>launch</mat-icon></button>
+                      <button routerLink="/profile/team/{{index.key}}" class="btn btn-success mr-1 index-btn-browse">Browse <mat-icon>launch</mat-icon></button>
                     </div>
 										<div class="index-actions" *ngIf="(index.role === ROLE_ADMIN || index.role === ROLE_OWNER) && !index.world_stopped">
 											<button class="btn btn-secondary mr-1 index-btn-users" (click)="openIndexMembers(index)">Users <mat-icon>admin_panel_settings</mat-icon></button>
@@ -163,7 +163,7 @@
                   </td>
 									<td style="text-align: right !important;" class="hidden-xs">
 										<div class="index-actions">
-											<button routerLink="/profile/overview/{{index.key}}" class="btn btn-success mr-1 index-btn-browse">Browse <mat-icon>launch</mat-icon></button>
+											<button routerLink="/profile/team/{{index.key}}" class="btn btn-success mr-1 index-btn-browse">Browse <mat-icon>launch</mat-icon></button>
 											<button (click)="leaveIndex(index)" class="btn btn-danger mr-1 index-btn-leave">Leave <mat-icon>delete_forever</mat-icon></button>
 										</div>
 									</td>
@@ -178,7 +178,7 @@
           <div class="index-new" *ngIf="confirmed && !loading">
 
             <button (click)="newIndex()" class="btn btn-success mr-1" style="margin-right: 10px;">
-              Create a new index <mat-icon>library_add</mat-icon>
+              Create a new team <mat-icon>library_add</mat-icon>
             </button>
             <button (click)="importV1Index()" class="btn btn-secondary" style="margin-right: 10px; float: right;">
               Import V1 index <span style="color: dimgrey">(only for indexes created before April 2021)</span> <mat-icon>download</mat-icon>
