--- a/src/app/auth/profile/components/userscript/userscript.component.html
+++ b/src/app/auth/profile/components/userscript/userscript.component.html
@@ -118,8 +118,9 @@
 							<div class="col-xs-12 col-sm-12 col-lg-6">
 								<h3>1. Indexing new reports</h3>
 								<h5>
-									Use the <strong>'Index +' button</strong> as shown on the right to add reports to your index.
+									Use the <strong>'Index +' button</strong> as shown on the right to upload the report to your GrepoData account.
 									<br/>The index button will be added to reports in your inbox and on reports posted on your alliance forum.
+									<br/>You can join a GrepoData team to share the collected intel with your allies.
 								</h5>
 							</div>
 							<div class="col-xs-12 col-sm-12 col-lg-6 userscript-img-container">
