--- a/src/app/index-version/index-version.component.html
+++ b/src/app/index-version/index-version.component.html
@@ -8,7 +8,7 @@
 	      <div class="row install-hint">
 	        <div class="col-md-7 col-lg-8">
 	          <h2>Install the userscript to start collecting enemy intelligence!</h2>
-            <h5>The intel you collect can be viewed by you and your allies if you share an index with them</h5>
+            <h5>The intel you collect can be viewed by you and your allies if you share a team with them</h5>
 	        </div>
 	        <div class="col-md-5 col-lg-4" style="padding-right: 40px;">
 	          <button mat-button class="mat-raised-button bg-gd-2" style="font-size: 22px; padding: 8px; width: 80%; top: 5px;color: white;" routerLink="/profile/script">
