--- a/src/app/indexer/analytics/analytics.component.html
+++ b/src/app/indexer/analytics/analytics.component.html
@@ -85,7 +85,7 @@
 			<!--Indexes-->
 			<div class="col-md-12 text-left" *ngIf="!loading_index && indexes_per_day.length > 0">
 
-				<h2 class="gd-secondary">Number of active indexes (per day)</h2>
+				<h2 class="gd-secondary">Number of active teams (per day)</h2>
 
 				<div class="ngx-chart-container">
 					<ngx-charts-line-chart
@@ -157,7 +157,7 @@
 			<!--Indexes total-->
 			<div class="col-md-12 text-left" *ngIf="!loading_index && total_indexes.length > 0">
 
-				<h2 class="gd-secondary">Total number of indexes created (accumulative)</h2>
+				<h2 class="gd-secondary">Total number of teams created (accumulative)</h2>
 
 				<div class="ngx-chart-container">
 					<ngx-charts-line-chart
@@ -181,7 +181,7 @@
 			<!--Indexes servers-->
 			<div class="col-md-12 text-left" *ngIf="!loading_index && index_world_bins.length > 0">
 
-				<h2 class="gd-secondary">Number of active indexes by country</h2>
+				<h2 class="gd-secondary">Number of active teams by country</h2>
 
 				<div class="ngx-chart-container" style="width: 84%;">
 					<ngx-charts-bar-vertical
