--- a/src/app/shared/dialogs/index-members/index-members.component.html
+++ b/src/app/shared/dialogs/index-members/index-members.component.html
@@ -3,10 +3,10 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<a (click)="dialogRef.close()" class="close"></a>
-				<h2 class="gd-secondary">User list for index <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: sub; font-size: 40px; margin-right: 10px;">account_balance</mat-icon>&nbsp;{{index.name}}</span></h2>
+				<h2 class="gd-secondary">User list for team <span class="gd-primary"><mat-icon style="opacity: 1; vertical-align: sub; font-size: 40px; margin-right: 10px;">account_balance</mat-icon>&nbsp;{{index.name}}</span></h2>
 
 				<div class="alert alert-gd-1">
-					<h5 *ngIf="!loading_users && !updating_roles">These users have access to your index. You can manage their access rights here.</h5>
+					<h5 *ngIf="!loading_users && !updating_roles">These users have access to your team. You can manage their access rights here.</h5>
 
 					<mat-progress-bar *ngIf="loading_users || updating_roles" style="margin-top: 8px; z-index: 122222;" mode="indeterminate"></mat-progress-bar>
 
@@ -15,7 +15,7 @@
 					</app-alert>
 
 					<app-alert type="success" title="User removed" *ngIf="user_removed!=''">
-						<h4 class="gd-secondary">User <span class="gd-primary">{{user_removed}}</span> has been removed from this index.</h4>
+						<h4 class="gd-secondary">User <span class="gd-primary">{{user_removed}}</span> has been removed from this team.</h4>
 					</app-alert>
 
 					<div class="text-center" *ngIf="!loading_users">
@@ -24,11 +24,11 @@
 							<tr>
 								<th scope="col" class="text-center">#</th>
 								<th scope="col" class="text-center">GrepoData username</th>
-								<th scope="col" class="text-center" matTooltip="Remove a user to deny their read access on this index">Can read intel</th>
+								<th scope="col" class="text-center" matTooltip="Remove a user to deny their read access to this team">Can read intel</th>
 								<th scope="col" class="text-center" matTooltip="These users can index new reports and add town notes">Can add intel</th>
-								<th scope="col" class="text-center" matTooltip="Index admins can change the index settings. They can also share the index with new users or remove users from the index.">Can manage index settings</th>
-								<th scope="col" class="text-center" matTooltip="Index owners have full control over the index and its settings.">Is index owner</th>
-								<th scope="col" class="text-center" matTooltip="When you remove a user, they will no longer be able to read the intel in this index">Remove user</th>
+								<th scope="col" class="text-center" matTooltip="Team admins can change the index settings. They can also share the team with new users or remove users from the team.">Can manage team settings</th>
+								<th scope="col" class="text-center" matTooltip="Team owners have full control over the team and its settings.">Is team owner</th>
+								<th scope="col" class="text-center" matTooltip="When you remove a user, they will no longer be able to read the intel in this team">Remove user</th>
 							</tr>
 							</thead>
 							<tbody>
@@ -41,7 +41,7 @@
 									<!--<img src="../../assets/images/grepodata_icon.ico" style="vertical-align: bottom;"/>-->
 									&nbsp;{{user.username}}
 								</td>
-								<td matTooltip="Read only: remove a user to deny their read access on this index">
+								<td matTooltip="Read only: remove a user to deny their read access on this team">
 									<mat-checkbox [checked]="true" disabled="true"></mat-checkbox>
 								</td>
 								<td matTooltip="Member: these users can index new reports and add town notes"
@@ -52,7 +52,7 @@
 										[disabled]="updating_roles || user.user_id === my_id || ((user.role == ROLE_ADMIN || user.role == ROLE_OWNER) && my_role != '' && my_role != ROLE_OWNER)">
 									</mat-checkbox>
 								</td>
-								<td matTooltip="Admin: index admins can manage other users and delete intel. They can also share the index with new users."
+								<td matTooltip="Admin: team admins can manage other users and delete intel. They can also share the team with new users."
 								>
 									<mat-checkbox
 										[checked]="[ROLE_OWNER, ROLE_ADMIN].includes(user.role)"
@@ -61,7 +61,7 @@
 									</mat-checkbox>
 								</td>
 								<td
-									matTooltip="Owner: index owners have full control over the index and its settings."
+									matTooltip="Owner: team owners have full control over the team and its settings."
 								>
 									<mat-checkbox
 										[checked]="[ROLE_OWNER].includes(user.role)"
@@ -69,7 +69,7 @@
 										[disabled]="updating_roles || user.user_id === my_id || (my_role != '' && my_role != ROLE_OWNER)">
 									</mat-checkbox>
 								</td>
-								<td matTooltip="When you remove a user, they will no longer be able to read the intel in this index">
+								<td matTooltip="When you remove a user, they will no longer be able to read the intel in this team">
 									<button (click)="removeUser(user)"
 									        class="btn btn-danger"
 									        [disabled]="updating_roles || user.user_id === my_id || ((user.role == ROLE_ADMIN || user.role == ROLE_OWNER) && my_role != '' && my_role != ROLE_OWNER)">
