--- a/src/app/shared/dialogs/new-index/new-index.component.html
+++ b/src/app/shared/dialogs/new-index/new-index.component.html
@@ -1,9 +1,9 @@
 <div style="font-size: 18px; width: auto; max-width: 800px; min-width: 50vw;">
 	<a (click)="close()" class="close" *ngIf="building==false"></a>
 	<h1 class="mat-primary" style="color: #18BC9C; margin-top: 0px;" mat-dialog-title>
-		<span *ngIf="submitted==false && building!=true">Create a new index</span>
-		<span *ngIf="submitted==false && building==true">Creating index..</span>
-		<span *ngIf="submitted==true && building!=true">Index created successfully!</span>
+		<span *ngIf="submitted==false && building!=true">Create a new team</span>
+		<span *ngIf="submitted==false && building==true">Creating team..</span>
+		<span *ngIf="submitted==true && building!=true">Team created successfully!</span>
 	</h1>
 
 	<!--<div mat-dialog-content *ngIf="login_required" style="width: 100%;">-->
@@ -12,8 +12,8 @@
 	<!--<div mat-dialog-content *ngIf="!login_required && submitted==false && building==false" style="width: 100%;">-->
 
 	<div mat-dialog-content *ngIf="submitted==false && building==false" style="width: 100%;">
-		<p>Submit this form to create a new enemy intelligence index.</p>
-		<p class="gd-primary"><strong>After creating an index, you can share it with your allies.</strong></p>
+		<p>Submit this form to create a new city indexer team.</p>
+		<p class="gd-primary"><strong>After creating a team, you can invite your allies to join.</strong></p>
 		<br/>
 
 		<div class="alert alert-gd-1 text-center" style="margin: 0 0 15px 0;">
@@ -46,7 +46,7 @@
 				<div class="row">
 					<div class="col-xs-12">
 						<mat-form-field style="width: 100% !important;">
-							<input autocomplete="off" style="width: 320px !important;" [ngModel]="index_name" (ngModelChange)="index_name=$event" required matInput placeholder="Enter a name for your index (e.g. your alliance name)">
+							<input autocomplete="off" style="width: 320px !important;" [ngModel]="index_name" (ngModelChange)="index_name=$event" required matInput placeholder="Enter a name for your team (e.g. your alliance name)">
 						</mat-form-field>
 					</div>
 				</div>
@@ -62,7 +62,7 @@
 
 			<div fxLayout="column" fxLayoutAlign="center" style="width: 100% !important;">
 				<button *ngIf="submitted==false && building==false" style="font-size: 22px; padding: 8px; width: 100%;" mat-button class="mat-raised-button mat-primary" (click)="captchaRef.execute()">
-					Create index
+					Create team
 				</button>
 				<button *ngIf="submitted==true && building==false" style="font-size: 22px; padding: 8px; width: 100%;" mat-button class="mat-raised-button mat-primary" (click)="dialogRef.close()">
 					Close
@@ -87,22 +87,22 @@
 	</div>
 
 	<div *ngIf="submitted==true && createError == ''">
-		<app-alert type="success" title="Your new index has been created." [dismissible]="false">
+		<app-alert type="success" title="Your new team has been created." [dismissible]="false">
 			<h5>
-				All reports that you index in world <strong><span [outerHTML]="createdIndex.world | WorldNamePipe"></span></strong> will now be added to this index.
+				All reports that you index in world <strong><span [outerHTML]="createdIndex.world | WorldNamePipe"></span></strong> will now be added to this team.
 				<br/>
 				<br/>
-				<strong>Tip:</strong> Share the index with your allies to work together to collect enemy intelligence!
+				<strong>Tip:</strong> Share the team with your allies to work together to collect enemy intelligence!
 			</h5>
 		</app-alert>
 		<br/>
-		<button *ngIf="createdIndex.key" class="btn btn-primary mr-1" (click)="showShareDialog()">Share index <mat-icon>group_add</mat-icon></button>
-		<button *ngIf="createdIndex.key" class="btn btn-secondary mr-1" routerLink="/profile/overview/{{createdIndex.key}}">Go to index overview <mat-icon>launch</mat-icon></button>
+		<button *ngIf="createdIndex.key" class="btn btn-primary mr-1" (click)="showShareDialog()">Share team <mat-icon>group_add</mat-icon></button>
+		<button *ngIf="createdIndex.key" class="btn btn-secondary mr-1" routerLink="/profile/team/{{createdIndex.key}}">Go to team overview <mat-icon>launch</mat-icon></button>
 		<button class="btn btn-secondary mr-1" style="float: right;" (click)="close()">Close</button>
 	</div>
 
 	<div *ngIf="submitted==true && createError != ''">
-		<app-alert type="error" title="Unable to create index.">
+		<app-alert type="error" title="Unable to create team.">
 			<h5>{{createError}}	</h5>
 		</app-alert>
 	</div>
